# pittqlabsys

./: .gitignore  ACKNOWLEDGMENTS.md  BRANCH_STRATEGY.md  CHANGELOG.md  CONTRIBUTORS.md  README.md  config.sample.json  install_offline.py  install_offline.sh  pyproject.toml  pytest.ini  requirements.txt  run_gui.py  setup_awg520_connections.py  start_pulse_sequence.py  test_manual_experiment_loading.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: lab-feature-request.md
.github/workflows/: quality-checks.yml
config/experiments/: mit_lab_config.json  my_custom_experiment_config.json  odmr_experiment_config.json  pitt_lab_config.json
docs/: ADBASIC_COMPILER_SETUP.md  AWG520_ADWIN_TESTING.md  CONFIGURATION_FILES.md  DEVELOPMENT_GUIDE.md  DEVICE_CONFIGURATION.md  DEVICE_DEVELOPMENT.md  EXPERIMENT_DEVELOPMENT.md  LAB_WORKFLOW_GUIDE.md  NAVIGATION.md  PARAMETER_SYSTEM_ARCHITECTURE_DISCUSSION.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_SUMMARY.md  QUALITY_GUIDELINES.md  QUALITY_QUICK_REFERENCE.md  README.md  README_AWG520.md  README_SG384.md  RECENT_UPDATES.md  ROLE_BASED_DEVICES_ARCHITECTURE.md  ROLE_BASED_EXPERIMENTS.md  ROLE_BASED_SOLUTION_SUMMARY.md  SEQUENCE_LANGUAGE_AND_PIPELINE.md  lab_pc_testing_guide.md
docs/architecture/: README.md
docs/guides/: README.md
docs/internal/: README.md
docs/reference/: README.md  adbasic-best-practices.md  adwin-counter-modes.md  adwin-timing-calibration.md  adwin-timing-system.md  debug-odmr-arrays-usage.md  device-parameter-validation.md  multi-waveform-odmr.md
examples/: README.md  README_AWG520.md  README_MUX_Control.md  README_SG384.md  README_mock_data.md  awg520_example.py  confocal_point_example.py  confocal_scan_example.py  confocal_scan_slow_example.py  debug_adbasic_script.py  debug_adwin_process.py  debug_matplotlib.py  debug_odmr_arrays.py  debug_odmr_counter.py  demo_data_pulse_visualization.py  demo_hardware_calibrator.py  demo_sequence_builder_visualization.py  diagnose_adwin_script.py  fix_path_patterns.py  galvo_scan_example.py  gui_feedback_demo.py  mock_data_experiment.py  mock_hardware_for_gui_testing.py  mux_control_example.py  notification_demo.py  odmr_fm_modulation_example.py  odmr_pulsed_example_sequence.txt  odmr_scan_example.py  odmr_stepped_example.py  odmr_sweep_config.json  odmr_sweep_continuous_example.py  odmr_sweep_continuous_multi_example.py  parameter_clamping_demo.py  sg384_example.py  simple_experiment_demo.py  stream_odmr_sweep.py  test_adwin_array_reading.py  test_adwin_sweep.py  test_all_pulse_types.py  test_dataset_gui.py  (+16 more)
examples/awg520_templates/: README.md  generate_example_sequence.py  generate_templates.py  generate_variable_scan_sequence.py
examples/awg520_testing/: README.md  generate_test_sequences.py  run_tests.py  test_adwin_awg520_trigger.py  test_adwin_awg520_trigger_pytest.py  test_adwin_trigger.py  test_t1_sequence_optimization.py  visualize_t1_compression.py
examples/debug/: README_visual_feedback_test.md  debug_peak_detection.py  run_visual_feedback_test.py  test_frequency_editing_simple.py  test_parameter_dialog_simple.py  test_parameter_improvements.py  test_parameter_phase2_improvements.py  test_parameter_phase3_improvements.py  test_parameter_widgets_gui.py  test_visual_feedback.py
examples/experiment_iterators/: README.md  multi_variable_odmr_scan.py
examples/results/: Confocal_Scan_250910-18_12_42_data.pkl  ODMR_Stepped_250910-18_12_42_data.pkl  ODMR_Sweep_Continuous_250910-18_12_42_data.pkl  README.md  experiment_config.json  experiment_data.csv  experiment_data.npy  experiment_logs.json  experiment_metadata.json  mit_lab_config.json  odmr_spectrum.npy  pitt_lab_config.json  scan_image.npy  time_trace.npy
examples/scan_data/: galvo_scan_20250804_150135.npz  galvo_scan_20250804_150439.npz  (+3 more)
scripts/: assess_quality.py  setup_lab_pc_testing.sh
src/: __init__.py  app.py  config.dev.template.json  config.json  config.lab.template.json  config.template.json  config_paths.py  config_store.py
tests/: README_SG384_hardware_tests.md  README_adwin_hardware_tests.md  conftest.py  example_experiment_test.py  ni6281_test.py  nidaq_test.py  pci6229_test.py  pci6601_test.py  run_gui_tests.py  run_sg384_coverage.py  test_adwin_compile.py  test_adwin_gold.py  test_adwin_hardware.py  test_adwin_timeout.py  test_awg520.py  test_awg520_optimizer.py  test_awg_file.py  test_bidirectional_sweep.py  test_config_store.py  test_confocal_pathlib.py  test_confocal_pathlib_simple.py  test_ctypes_imports.py  test_daq_read_counter.py  test_data_ramp.csv  test_data_sine_wave.csv  test_device.py  test_device_config.py  test_device_config_simple.py  test_device_inheritance.py  test_device_units_validation.py  test_environment_detection.py  test_experiment.py  test_experiment_base_class.py  test_experiment_iterator_comprehensive.py  test_experiment_iterator_fixes.py  test_experiment_save_debug.py  test_export_to_aqs.py  test_export_tool_save_debug.py  test_galvo_scan.py  test_gui_basic.py  (+40 more)
(+156 files in other folders)
